fix(scrollable-table) add to offset parents' bottom spacing recursively

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -141,10 +141,6 @@
 }
 
 .image-select-modal {
-  .p-modal__dialog {
-    overflow-y: hidden;
-  }
-
   > section {
     min-height: 100%;
   }
@@ -214,9 +210,5 @@
     .image-list {
       max-height: calc(100vh - 250px);
     }
-  }
-
-  #modal-bottom-space {
-    margin-bottom: 2rem;
   }
 }
